--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,7 @@ dependencies {
 
     annotationProcessor 'org.projectlombok:lombok'
 
+    testImplementation 'org.testcontainers:postgresql:1.13.0'
+    testImplementation 'com.github.tomakehurst:wiremock-jre8:2.26.3'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
